Bug 42578 - [SNB]"Current RS state" doesn't support SNB
Summary: [SNB]"Current RS state" doesn't support SNB
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Ben Widawsky
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-03 22:46 UTC by Ouping Zhang
Modified: 2017-07-24 23:03 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
wip patch (4.08 KB, patch)
2011-11-07 10:31 UTC, Ben Widawsky
no flags Details | Splinter Review

Description Ouping Zhang 2011-11-03 22:46:30 UTC
System Environment:
--------------------------
Kernel: (drm-intel-next)64a742fac3a22f57303d8f1b7e347350a1c48254

Bug detailed description:
-------------------------
Checking codes, when have enabled RC6,  cat /sys/kernel/debug/dri/0/i915_drpc_info:
Render standby enabled: yes
Current RS state: on

There are 7 RS states: on, RC1, RC1E, RS1, RS2(RC6), RC3(RC6+) and unknown.
"current RS state" is on instead of RS2(RC6) after having enabled RC6( i915.i915_enable_rc6=1 ).
Comment 1 Ben Widawsky 2011-11-07 10:31:16 UTC
Created attachment 53258 [details] [review]
wip patch

I think I need to punt this off to Jesse. I have no idea what some of the old fields mean, and I can't even find definitions for some of the new fields he added on the other related debugfs entry.
Comment 2 Ben Widawsky 2011-11-22 15:34:08 UTC
I just posted some patches on intel-gfx for a fix. The WIP patch is actually not correct as it doesn't attempt to unforcewake before reading.
Comment 3 Florian Mickler 2012-01-21 08:53:09 UTC
A patch referencing this bug report has been merged in Linux v3.3-rc1:

commit 4d85529d584856d077895a2daa703224d3aee7e1
Author: Ben Widawsky <ben@bwidawsk.net>
Date:   Mon Dec 12 19:34:16 2011 -0800

    drm/i915: drpc debugfs update for gen6
Comment 4 Ouping Zhang 2012-01-30 17:52:46 UTC
This issue has been fixed.
cat /sys/kernel/debug/dri/0/ i915_drpc_info with the latest kernel, info listed below.
RC information accurate: yes
Video Turbo Mode: yes
HW control enabled: yes
SW control enabled: no
RC6 Enabled: no
RC6 Enabled: yes
Deep RC6 Enabled: yes
Deepest RC6 Enabled: no
Current RC state: RC6
Core Power Down: no

there are two RC6 status"RC6 Enabled: no" and "RC6 Enabled: yes". I am confused it.
checking codes,fuction gen6_drpc_info in drm-intel/drivers/gpu/drm/i915/i915_debugfs.c:
seq_printf(m, "RC6 Enabled: %s\n",
                   yesno(rcctl1 & GEN6_RC_CTL_RC1e_ENABLE));
seq_printf(m, "RC6 Enabled: %s\n",
                   yesno(rcctl1 & GEN6_RC_CTL_RC6_ENABLE));

reading GEN6_RC_CTL_RC1e_ENABLE and GEN6_RC_CTL_RC6_ENABLE,output "RC6 Enabled: no" and "RC6 Enabled: yes". what's the current RC6 status?

(In reply to comment #3)
> A patch referencing this bug report has been merged in Linux v3.3-rc1:
> commit 4d85529d584856d077895a2daa703224d3aee7e1
> Author: Ben Widawsky <ben@bwidawsk.net>
> Date:   Mon Dec 12 19:34:16 2011 -0800
>     drm/i915: drpc debugfs update for gen6
Comment 5 Ben Widawsky 2012-01-30 23:49:57 UTC
This was (In reply to comment #4)
> This issue has been fixed.
> cat /sys/kernel/debug/dri/0/ i915_drpc_info with the latest kernel, info listed
> below.
> RC information accurate: yes
> Video Turbo Mode: yes
> HW control enabled: yes
> SW control enabled: no
> RC6 Enabled: no
> RC6 Enabled: yes
> Deep RC6 Enabled: yes
> Deepest RC6 Enabled: no
> Current RC state: RC6
> Core Power Down: no
> 
> there are two RC6 status"RC6 Enabled: no" and "RC6 Enabled: yes". I am confused
> it.
> checking codes,fuction gen6_drpc_info in
> drm-intel/drivers/gpu/drm/i915/i915_debugfs.c:
> seq_printf(m, "RC6 Enabled: %s\n",
>                    yesno(rcctl1 & GEN6_RC_CTL_RC1e_ENABLE));
> seq_printf(m, "RC6 Enabled: %s\n",
>                    yesno(rcctl1 & GEN6_RC_CTL_RC6_ENABLE));
> 
> reading GEN6_RC_CTL_RC1e_ENABLE and GEN6_RC_CTL_RC6_ENABLE,output "RC6 Enabled:
> no" and "RC6 Enabled: yes". what's the current RC6 status?
> 
> (In reply to comment #3)
> > A patch referencing this bug report has been merged in Linux v3.3-rc1:
> > commit 4d85529d584856d077895a2daa703224d3aee7e1
> > Author: Ben Widawsky <ben@bwidawsk.net>
> > Date:   Mon Dec 12 19:34:16 2011 -0800
> >     drm/i915: drpc debugfs update for gen6

There was a bug in the patch which Eric Anholt has fixed. It should already be in Keith's tree. I am closing this bug.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.